test/error/OpEqualStringInt.fu
public static class Test
{
	public static bool Run()
	{
		int i = 42;
		return "42" == i; //ERROR: Cannot compare 'string' with 'int'
	}
}
